# fore

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/Shaders/Fragment/: default.frag
app/src/main/assets/Shaders/Vertex/: default.vert
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/Components/: Component.cpp  Component.h
app/src/main/cpp/Components/Camera/: Camera.cpp  Camera.h
app/src/main/cpp/Components/Material/: Material.cpp  Material.h
app/src/main/cpp/Components/Mesh/: MeshComponent.cpp  MeshComponent.h
app/src/main/cpp/Components/Mesh/Primitives/: Primitive.cpp  Primitive.h
app/src/main/cpp/Components/Mesh/Primitives/Cube/: Cube.h
app/src/main/cpp/Components/Mesh/Primitives/Sphere/: Sphere.h
app/src/main/cpp/Components/Transform/: Transform.cpp  Transform.h
app/src/main/cpp/Core/: Renderer.cpp  Renderer.h
app/src/main/cpp/Entities/: Entity.cpp  Entity.h  Square.cpp  Square.h
app/src/main/cpp/Entities/Objects/: Camera.cpp  Camera.h  Cube.cpp  Cube.h
app/src/main/cpp/Entities/Objects/Cubemap/: Cubemap.cpp  Cubemap.h
app/src/main/cpp/Graphics/: Color.cpp  Color.h  Shader.cpp  Shader.h
app/src/main/cpp/Math/: Vector3.h
app/src/main/cpp/Utils/: AssetLoader.cpp  AssetLoader.h  Shader.h  Surface.cpp  Surface.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+5 files in other folders)
